# flick

./: .gitignore  Cargo.toml  Packager.toml  README.md  SECURITY.md  TODO  build.rs  sign.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  release-windows.yml  release.yml
scripts/: ci.sh  generate-apt-signing-key.sh  generate-mpv-import-lib.ps1  mpv-linux-static-build.sh  mpv-linux-static-versions.txt  mpv-windows-setup.sh  package-linux.sh  package-macos.sh  package-windows.ps1  package-windows.sh  publish-apt.sh  tag-release.sh
src/: debug.rs  dialogs.rs  import.rs  main.rs  reveal.rs
src/playlist/: item.rs  mod.rs  shuffle.rs
src/thumbnails/: cache.rs  frame.rs  hash.rs  mod.rs  poster.rs  sprite.rs  video_poster.rs
src/ui_bridge/: ab_loop.rs  gallery.rs  gif.rs  loading.rs  mod.rs  playback.rs  sprite_preview.rs  state.rs
ui/: app-window.slint  components.slint  image-viewer.slint  loading-overlay.slint  progress-bar.slint  sidebar.slint  theme.slint  toast.slint
